--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+Open JTalkの改変版
+
+library以下のディレクトリで変更点が見ることが出来ます。
+library側に以下の機能が追加されています。
+
+- フルコンテキストラベル出力機能
+- ユーザ辞書の読み込み機能
+- ユーザ辞書の作成機能
+
+///////////////////////////////////////////////////////////////////////////////
+
 ===============================================================================
                The Japanese TTS System "Open JTalk" version 1.10
                            release December 25, 2016
