--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Version 1.11:
+ * add UniDic.
+ * add digit rules for digits including comma.
+ * add pronunciation rules for filler.
+ * fix some bugs.
+
 Version 1.10:
  * modify digit rules.
  * add many words to dictionary.
